# atpack-python-parser

./: .gitignore  Makefile  README.md  debug_pic.py  download_atpacks.py  mkdocs.yml  pyproject.toml  requirements.txt  setup_dev.py
.github/workflows/: ci.yml  docs.yml
atpacks/: README.md
docs/: README.md  api-reference.md  api-usage.md  cli-usage.md  development.md  device-specifications.md  examples.md  index.md  installation.md  interactive-mode.md  legal.md  tui-usage.md
examples/: analyze_atmel_for_platformio.py  analyze_pic_for_platformio.py  complete_specs_demo.py  comprehensive_usage.py  example_usage.py  extract_device_specs.py  simple_usage.py  test_shadowidref.py  validate_shadowidref.py
src/atpack_parser/: __init__.py  atdf_parser.py  atpack_extractor.py  cli.py  device_specs.py  device_specs_extractor.py  exceptions.py  models.py  parser.py  pdsc_parser.py  pic_parser.py  tui_app.py  xml_utils.py
src/atpack_parser/cli/: __init__.py  common.py  common_clean.py  config.py  devices.py  files.py  global_commands.py  interactive.py  memory.py  registers.py  tui_command.py
src/atpack_parser/data/: pic_device_specs.json
src/atpack_parser/display/: __init__.py  memory.py  registers.py
src/atpack_parser/extractors/: __init__.py  device_specs.py
src/atpack_parser/models/: device_specs.py
src/atpack_parser/parser/: __init__.py  atdf.py  atpack.py  pdsc.py  pic.py  xml.py
src/atpack_parser/runners/: __init__.py  cli.py  interactive.py  tui.py
src/atpack_parser/tui/: __init__.py  main.py  styles.tcss
src/atpack_parser/utils/: __init__.py  device_specs.py  family_display.py  units.py
tests/: conftest.py  test_cli.py  test_debug.py  test_enhanced_atmel.py  test_enhanced_pic.py  test_hierarchical_memory.py  test_parser.py
tests/integration/: test_atmel_atmega.py  test_enhanced_pic.py  test_hierarchical_memory.py  test_microchip_pic16fxxx.py  test_microchip_pic24f-ka-kl-km.py
