[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atpack-parser"
version = "0.1.0"
description = "A Python library and CLI tool for parsing ATMEL and Microchip AtPack files with intelligent error handling and fuzzy device name suggestions"
authors = [
    {name = "Sébastien Celles", email = "s.celles@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer[all]>=0.9.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pathlib",
    "pint>=0.20.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.45.0",
]
interactive = [
    "prompt-toolkit>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
    # TUI support for development
    "textual>=0.45.0",
    # Interactive support for development
    "prompt-toolkit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
]

[project.urls]
"Homepage" = "https://s-celles.github.io/atpack-python-parser/"
"Bug Reports" = "https://github.com/s-celles/atpack-python/issues"
"Source" = "https://github.com/s-celles/atpack-python"

[project.scripts]
atpack = "atpack_parser.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/atpack_parser"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/atpack_parser",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require external files",
    "atpack_required: marks tests that require AtPack files to be present",
]
testpaths = ["tests"]
